--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "nodemon": "^2.0.2"
   },
   "dependencies": {
+    "bufferutil": "^4.0.1",
     "discord.js": "^12.1.1",
     "erlpack": "github:discordapp/erlpack",
     "fs-extra": "^9.0.0",
     "moment": "^2.24.0",
     "node-opus": "^0.3.3",
-    "uws": "^100.0.1"
+    "utf-8-validate": "^5.0.2",
+    "zlib-sync": "^0.1.6"
   }
 }
