Basic Working Framework

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "Discord",
     "EZ"
   ],
-  "author": "Amelia Rose Aldridge",
+  "author": "Amelia Rose Aldridge <amelia@sanarinomi.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/SanaRinomi/FrameCord/issues"
