--- a/package.json
+++ b/package.json
@@ -35,5 +35,9 @@
     "moment": "^2.27.0",
     "utf-8-validate": "^5.0.2",
     "zlib-sync": "^0.1.7"
+  },
+  "engineStrict": true,
+  "engines": {
+    "node": ">=12.0.0"
   }
 }
